# symgrad

./: .gitignore  README.md  environment.yml  pyproject.toml
symgrad/: __init__.py  cache.py  constant.py  core.py  exact.py  expression.py  grad.py  grad_rules.py  parameter_singleton_meta.py  set.py  set_element.py  set_element_test.py  set_test.py  shared_context.py  shared_context_test.py  test_binary_operator.py  test_custom_set.py  test_equality.py  test_exact.py  test_operators.py  variable.py  wrap_constant.py
symgrad/manipulation/: __init__.py  auto_simplify.py  auto_simplify_benchmark.py  auto_simplify_test.py  cancel.py  conftest.py  expand.py  expand_old.py  expand_test_.py  expression_optimizer.py  expression_optimizer_test.py  extract_chain.py  extract_chain_test.py  metrics.py  metrics_test.py  simplify.py  sort_chain.py  sort_chain_test.py  sort_metric.py  sort_metric_test.py  test_cancel.py  test_helpers.py
symgrad/operators/: __init__.py  add.py  add_test.py  binary_condense.py  binary_operator.py  binary_operator_test.py  chain_helpers.py  chain_helpers_test.py  inverse.py  multiply.py  multiply_test.py  neg.py  operator.py  power.py  unary_operator.py
symgrad/polynomial/: polynomial.py  polynomial_test.py
symgrad/rules/: __init__.py  abstract_tree.py  abstract_tree_from_expression.py  equiv.py  equiv_test.py  knowledgebase.py  knowledgebase_test.py  lexer.py  match_sets.py  match_sets_test.py  matcher.py  matcher_cache.py  matcher_test.py  parse_tokens.py  rule_collection.py  rule_matcher.py  rule_matcher_test.py
symgrad/sets/: __init__.py  (+8 more)
(+5 files in other folders)
